kubernetes/service-lb-pi-hole.yml
apiVersion: v1
kind: Service
metadata:
  name: pi-hole
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: dns-udp
  selector:
    app: pi-hole
  type: LoadBalancer
